# sqlitestudioATDist

./: ChangeLog  Makefile.am  NEWS  README  configure.ac
source/desktop/: Makefile.am
source/distobjects/: Makefile.am  sqlitestudio.png.in
source/man/man1/: Makefile.am  sqlitestudio.1.txt  sqlitestudiocli.1.txt
source/progs/bash/: Makefile.am  sqlitestudio.in  sqlitestudiocli.in
src/applications/: Makefile.am  sqlitestudio.desktop.in
src/distobjects/: Makefile.am  extdisttar
src/manpages/man1/: Makefile.am  sqlitestudio.1.txt
src/scripts/: Makefile.am  sqlitestudio.in
