#! /usr/bin/env bash
##########################################################################
##									##
## Script ID: ./Makefile.am						##
## Author: Mark Grant							##
##									##
## Purpose:								##
## Automake script file to generate sqlitestudio project from source.	##
##									##
##########################################################################

##########################################################################
##									##
## Changelog								##
##									##
## Date		Author	Version	Description				##
##									##
## 07/08/2014	MG	1.0.1	Started versioning of this script.	##
##									##
##########################################################################


SUBDIRS = src/applications src/scripts src/manpages/man1 src/distobjects
